<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- 钱包 -->
    <string name="wallet_title">钱包</string>
    <string name="wallet">钱包</string>
    <string name="wallet_balance">余额</string>
    <string name="wallet_frozen">冻结金额</string>
    <string name="wallet_recharge">充值</string>
    <string name="wallet_withdraw">提现</string>
    <string name="wallet_records">账单明细</string>
    <string name="wallet_set_pay_pwd">设置支付密码</string>
    <string name="wallet_change_pay_pwd">修改支付密码</string>
    <string name="wallet_input_pay_pwd">请输入支付密码</string>
    <string name="wallet_input_old_pay_pwd">请输入原支付密码</string>
    <string name="wallet_input_new_pay_pwd">请输入新支付密码</string>
    <string name="wallet_confirm_pay_pwd">请确认支付密码</string>
    <string name="wallet_pay_pwd_not_match">两次密码不一致</string>
    <string name="wallet_pay_pwd_6_digits">支付密码必须为6位数字</string>
    
    <!-- 充值 -->
    <string name="recharge_title">充值</string>
    <string name="recharge_amount">充值金额</string>
    <string name="recharge_input_amount">请输入充值金额</string>
    <string name="recharge_remark">备注</string>
    <string name="recharge_submit">提交申请</string>
    <string name="recharge_success">充值申请已提交，请等待审核</string>
    
    <!-- 提现 -->
    <string name="withdraw_title">提现</string>
    <string name="withdraw_amount">提现金额</string>
    <string name="withdraw_input_amount">请输入提现金额</string>
    <string name="withdraw_real_name">真实姓名</string>
    <string name="withdraw_bank_name">银行名称</string>
    <string name="withdraw_bank_card">银行卡号</string>
    <string name="withdraw_submit">提交申请</string>
    <string name="withdraw_success">提现申请已提交，请等待审核</string>
    <string name="withdraw_balance_not_enough">余额不足</string>
    
    <!-- 转账 -->
    <string name="transfer_title">转账</string>
    <string name="transfer_to">转账给</string>
    <string name="transfer_amount">转账金额</string>
    <string name="transfer_input_amount">请输入转账金额</string>
    <string name="transfer_remark">转账说明</string>
    <string name="transfer_confirm">确认转账</string>
    <string name="transfer_success">转账成功</string>
    <string name="transfer_receive">领取转账</string>
    <string name="transfer_refund">退还转账</string>
    <string name="transfer_received">已领取</string>
    <string name="transfer_refunded">已退回</string>
    <string name="transfer_expired">已过期</string>
    <string name="transfer_pending">待领取</string>
    
    <!-- 红包 -->
    <string name="red_packet_title">发红包</string>
    <string name="red_packet_amount">红包金额</string>
    <string name="red_packet_count">红包个数</string>
    <string name="red_packet_input_amount">请输入红包金额</string>
    <string name="red_packet_input_count">请输入红包个数</string>
    <string name="red_packet_remark">祝福语</string>
    <string name="red_packet_default_remark">恭喜发财，大吉大利</string>
    <string name="red_packet_type_normal">普通红包</string>
    <string name="red_packet_type_lucky">拼手气红包</string>
    <string name="red_packet_send">塞钱进红包</string>
    <string name="red_packet_success">红包发送成功</string>
    <string name="red_packet_open">开</string>
    <string name="red_packet_detail">红包详情</string>
    <string name="red_packet_from">来自</string>
    <string name="red_packet_best_luck">手气最佳</string>
    <string name="red_packet_grabbed">已领取</string>
    <string name="red_packet_finished">红包已被抢完</string>
    <string name="red_packet_expired">红包已过期</string>
    <string name="red_packet_total">共%1$d个红包，共%2$s元</string>
    <string name="red_packet_received_count">%1$d/%2$d个红包</string>
    
    <!-- 通用 -->
    <string name="yuan">元</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="loading">加载中…</string>
    <string name="no_more">没有更多了</string>
    <string name="wallet_submitting">提交中…</string>
    
    <!-- 新增 -->
    <string name="recharge">充值</string>
    <string name="withdraw">提现</string>
    <string name="transfer">转账</string>
    <string name="set_pay_pwd">设置支付密码</string>
    <string name="modify_pay_pwd">修改支付密码</string>
    <string name="send_red_packet">发红包</string>
    <string name="default_red_packet_remark">恭喜发财，大吉大利</string>
    <string name="input_pay_password">请输入支付密码</string>
    <string name="forget_pay_password">忘记密码？</string>
    <string name="pay_password_error">支付密码错误</string>
    <string name="pay_password_hint">请输入6位数字支付密码</string>
    <string name="red_packet_luck">拼手气红包</string>
    <string name="red_packet_normal">普通红包</string>
    <string name="total_amount">总金额</string>
    <string name="red_packet_sending">红包发送中...</string>
    <string name="red_packet">红包</string>
    <string name="red_packet_view_detail">查看红包</string>
    <string name="pay_pwd_security_tip">支付密码用于红包、转账等资金操作，请妥善保管，切勿泄露给他人</string>
</resources>

